--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,8 @@ p {
   font-weight: 400;
 }
 
+/* NAVBAR */
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -63,6 +65,8 @@ p {
   border-top: solid 2px var(--blue);
 }
 
+/* HEADING */
+
 .section_heading {
   margin: 20px 0;
 }
@@ -70,6 +74,8 @@ p {
 .heading {
   margin-bottom: 10px;
 }
+
+/* SEARCH-BAR */
 
 .search_bar {
   width: 446px;
@@ -132,9 +138,12 @@ p {
   color: var(--black);
 }
 
+/* FILTER SECTION*/
+
 .filter {
   display: flex;
-  justify-content: flex-start;
+  width: 80%;
+  justify-content: space-between;
   align-items: center;
   margin: 40px 0;
   height: 50px;
@@ -148,15 +157,10 @@ p {
   background-color: var(--blue-clear);
 }
 
-.heading_filter {
-  margin-right: 30px;
-}
-
 .filter_link {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 25px;
   padding: 0 15px;
   height: 50px;
   border: solid 2px var(--grey);
@@ -198,27 +202,26 @@ p {
   font-size: 10px;
 }
 
-#accomondation {
-  padding: 50px;
+/* MAIN SECTION */
+
+#main_container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main_cards_ui {
+  padding: 40px;
   background-color: var(--grey);
   border-radius: 20px;
 }
 
-.grid_cards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 50px;
-  grid-row-gap: 50px;
-  margin-top: 20px;
-}
+/* CARDS MAIN SECTION */
 
 .card {
   background-color: var(--white);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  /* width: 30%; */
-  width: 100%;
+  /* width: 100%; */
   padding: 5px;
   border-radius: 20px;
 }
@@ -257,4 +260,103 @@ p {
 
 .star-grey {
   color: var(--grey);
+}
+
+/* ACCOMODATION SECTION*/
+
+#accomondation {
+  width: 60%;
+  margin-right: 40px;
+}
+
+.heading_accomondation {
+  margin-bottom: 20px;
+}
+
+a.link_accomondation_plus {
+  color: var(--black);
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.grid_cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 40px;
+  grid-row-gap: 40px;
+}
+
+/* MOST POPULAR SECTION */
+
+#most_popular {
+  width: 30%;
+}
+
+.header_most_pop {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.header_most_pop .fa-chart-line {
+  color: var(--blue);
+  width: 18px;
+}
+
+#card_most_popular .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#card_most_popular {
+  display: flex;
+  height: 144px;
+}
+
+#card_most_popular img {
+  height: auto;
+  width: 40%;
+  border-radius: 15px 0 0 15px;
+}
+
+.cards_most_pop {
+  display: grid;
+  grid-gap: 40px;
+}
+
+/* FOOTER */
+
+#footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--grey);
+  padding: 50px 70px;
+  margin-top: 20px;
+}
+
+#footer h3 {
+  font-size: 18px;
+}
+
+.list_footer {
+  list-style: none;
+}
+
+.list_footer li {
+  margin: 20px 0;
+}
+
+.list_footer a {
+  text-decoration: none;
+  color: var(--black);
+  font-size: 16px;
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (min-width: 600px) {
 }
