--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 }
 
 html {
-  /* max-width: 1400px; */
+  max-width: 1400px;
   scroll-behavior: smooth;
 }
 
@@ -41,6 +41,11 @@ p {
   font-weight: 400;
 }
 
+a {
+  text-decoration: none;
+  color: var(--black);
+}
+
 /* NAVBAR */
 
 .navbar {
@@ -56,8 +61,6 @@ p {
 
 .navbar a {
   padding: 38px 48px;
-  text-decoration: none;
-  color: var(--black);
 }
 
 .navbar a:hover {
@@ -85,8 +88,7 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  /* width: 332px; */
-  /* width: 40%; */
+  margin: 0;
   border: solid 1px var(--grey);
   border-radius: 15px;
 }
@@ -104,6 +106,10 @@ p {
   padding: 0 16px;
 }
 
+.btn_icon {
+  display: none;
+}
+
 .fa-location-dot {
   color: var(--black);
 }
@@ -117,7 +123,6 @@ p {
 
 .btn_location:hover {
   background-color: var(--black);
-  /* color: var(--white); */
 }
 
 .btn_location:hover .fa-location-dot {
@@ -143,13 +148,13 @@ p {
 .filter_container {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  margin: 40px 0;
 }
 
 .filter {
   display: flex;
-  overflow: auto;
-  margin: 40px 0;
-  height: 54px;
+  flex-wrap: wrap;
 }
 
 .heading_filter {
@@ -158,23 +163,19 @@ p {
 }
 
 .filter a {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 50px;
   margin: 0 10px;
-  text-decoration: none;
+  padding: 0 15px;
+  border: solid 2px var(--grey);
+  border-radius: 29px;
 }
 
 .filter a:hover {
   background-color: var(--blue-clear);
-}
-
-.filter_link {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  /* margin: 0 20px; */
-  padding: 0 15px;
-  height: 50px;
-  border: solid 2px var(--grey);
-  border-radius: 25px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .filter_link h2 {
@@ -232,18 +233,12 @@ p {
   background-color: var(--white);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  /* width: 100%; */
   padding: 5px;
   border-radius: 20px;
 }
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-#main_container a {
-  text-decoration: none;
-  color: var(--black);
 }
 
 .card img {
@@ -290,8 +285,6 @@ p {
 }
 
 a.link_accomondation_plus {
-  color: var(--black);
-  text-decoration: none;
   font-size: 18px;
   font-weight: 700;
 }
@@ -359,19 +352,15 @@ a.link_accomondation_plus {
   margin: 50px 0 20px 0;
 }
 
-/* #section_activities {
-  margin-bottom: 50px;
-} */
-
 .activities {
   display: flex;
   justify-content: space-between;
+  grid-gap: 20px;
 }
 
 #card_activities {
   height: auto;
-  width: 302;
-  margin: 0 20px;
+  width: 302px;
   padding: 0;
 }
 
@@ -414,10 +403,6 @@ a.link_accomondation_plus {
 /* MEDIA QUERIES TABLETTE */
 
 @media only screen and (max-width: 992px) {
-  body {
-    background-color: lightblue;
-  }
-
   #main_container {
     display: block;
   }
@@ -447,13 +432,16 @@ a.link_accomondation_plus {
   #card_activities img {
     height: 210px;
   }
+
+  .filter a {
+    margin: 10px;
+  }
 }
 
 /* MEDIA QUERIES MOBILE */
 
 @media only screen and (max-width: 768px) {
   body {
-    background-color: lightpink;
     margin: 0 20px;
   }
 
@@ -491,5 +479,103 @@ a.link_accomondation_plus {
   .search_bar {
     width: 100%;
     max-width: 446px;
+    margin: 0;
+  }
+
+  .btn_icon {
+    display: block;
+  }
+
+  .btn_text {
+    display: none;
+  }
+
+  .filter_container {
+    display: block;
+  }
+
+  .heading_filter {
+    margin-bottom: 10px;
+  }
+
+  .filter {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 10px;
+    grid-column-gap: 10px;
+    align-items: center;
+    font-size: 11px;
+  }
+
+  .filter a {
+    padding: 0;
+    margin: 0;
+  }
+
+  .filter a:hover {
+    background-color: var(--white);
+  }
+
+  h2.title_link {
+    font-size: 11px;
+  }
+
+  #main_container {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  #accomondation {
+    background-color: var(--white);
+    width: unset;
+    margin: 0 -20px;
+    border-radius: 0;
+  }
+
+  a.link_accomondation_plus {
+    display: none;
+  }
+
+  .main_cards_ui {
+    padding: 20px;
+  }
+
+  .grid_cards {
+    display: flex;
+    flex-direction: column;
+  }
+  #footer {
+    flex-direction: column;
+    margin: 70px -20px;
+    grid-row-gap: 30px;
+    padding: 50px;
+  }
+
+  #most_popular {
+    width: unset;
+    margin: 0 -20px;
+    padding: 40px 20px 50px;
+    border-radius: 0;
+  }
+
+  #card_most_popular {
+    width: unset;
+  }
+
+  .cards_most_pop {
+    flex-direction: column;
+  }
+
+  .activities {
+    flex-direction: column;
+  }
+
+  #card_activities {
+    width: unset;
+  }
+
+  .section_activities {
+    margin: 70px 0;
   }
 }
